44
================

06/10/20 Fix TinyMCE default fontsize to match old version
06/10/20 Allow template paths to be specified in rename
06/10/20 Overridable default cut off of 3 years for PetLink chips
06/10/20 Allow OSM tile location to be overridden
05/10/20 Add locale for Mauritius, correct currency symbol for India
05/10/20 Extra common punctuation in alphanumber for tattoo/chip
05/10/20 Upgrade to TinyMCE 5.3.1
05/10/20 Start date missing from AnimalMedicals wordkey
05/10/20 Non-neutered adoptable status should use alert config item
01/10/20 SavourLife now support deleting listings via API
30/09/20 asm3-adoptable-reserved class and manual example
30/09/20 Support for writing record and report views to audit log #703
30/09/20 Support for writing sent emails to the audit log #639
29/09/20 Support MOVEMENTTYPE==0 to create reservations in import
29/09/20 ANIMALENTRYCATEGORY import field, export new fields
28/09/20 Diary note completion messages linked to wrong config item
27/09/20 Add ANIMALJURISDICTION csv import field
26/09/20 Close prediction attack flaw in document signing by email #917
26/09/20 Consistent keyboard handling for alphanumber widget #914
25/09/20 Email address books #179
25/09/20 Add HomeCheckedDate person wordkey
24/09/20 Use pickup address and brought in by when lost->shelter matching
23/09/20 Support good with kids over 5/12 when csv importing
22/09/20 Completion actions not appearing under audit slider #909
22/09/20 AnimalLogsTYPE wordkey/token #912
22/09/20 Remove signature placeholders on document sign preview #910
11/09/20 Advanced find for pickup location/reason for entry #683
11/09/20 Missing view person permission breaks staff rota
07/09/20 Apply DST to service calls #899
07/09/20 Merge additional fields during csv import #894
07/09/20 Prompt to clone animal #907
07/09/20 Prevent additional fields overriding base values #904
07/09/20 Stop control keys dirtying form, fix autofocus delay #906